# neoskills

./: Dockerfile  LICENSE  README.md  main.py  neoskills_v0_1.md  neoskills_v0_2.md  neoskills_v0_21.md  pyproject.toml  skill-dedup.skill
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
agents/: skill-dedup.md  skill-deployer.md  skill-importer.md  skill-scanner.md
commands/: ns.md
skills/bank-status/: SKILL.md
skills/skill-dedup/: SKILL.md
skills/skill-dedup/scripts/: dedup_scan.py
src/neoskills/: __init__.py
src/neoskills/adapters/: __init__.py  base.py  factory.py
src/neoskills/adapters/claude/: __init__.py  adapter.py
src/neoskills/adapters/openclaw/: __init__.py  adapter.py
src/neoskills/adapters/opencode/: __init__.py  adapter.py
src/neoskills/bank/: __init__.py  provenance.py  registry.py  store.py  validator.py
src/neoskills/bundles/: __init__.py  manager.py
src/neoskills/capabilities/: __init__.py  discover.py  evolution.py  governance.py  lifecycle.py  registry_ops.py
src/neoskills/cli/: __init__.py  agent_cmd.py  brew_install_cmd.py  config_cmd.py  create_cmd.py  deploy_cmd.py  doctor_cmd.py  embed_cmd.py  enhance_cmd.py  import_cmd.py  init_cmd.py  install_cmd.py  link_cmd.py  list_cmd.py  main.py  migrate_cmd.py  plugin_cmd.py  push_cmd.py  scan_cmd.py  sync_cmd.py  tap_cmd.py  target_cmd.py  update_cmd.py  validate_cmd.py
src/neoskills/core/: __init__.py  auth.py  cellar.py  checksum.py  config.py  frontmatter.py  linker.py  mode.py  models.py  namespace.py  tap.py  workspace.py
src/neoskills/mappings/: __init__.py  resolver.py  target.py
src/neoskills/meta/: __init__.py  enhancer.py
src/neoskills/plugin/: __init__.py  plugin_context.py  schema.py
src/neoskills/runtime/: __init__.py
src/neoskills/runtime/claude/: __init__.py  plugin.py
src/neoskills/translators/: __init__.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_adapters.py  test_bank.py  test_capabilities.py  test_cli.py  test_config_hierarchy.py  test_core.py  test_linker.py  test_mode.py  test_sync.py  test_tap.py  test_validator.py
